@@ -2,6 +2,8 @@
   -fixed Shadow Temple having 1 free item too much
   -changed free item counters to go upwards so the dungeon gets cleared if you have them all
   -fixed Statue Ledge in Spirit Temple reachable w/ hoverboots and w/o hookshot
+  -fixed rooftop chest in gerudo fortress reachable with hookshot (and scarecrow)
+  -fixed a few Forest Temple locations
 1.0.0.5:
   -fixed Adult Shooting Gallery showing without bow
   -added Dampe back in, he got lost in the reorganization, oops
